# rus3

./: Cargo.toml  Dockerfile  docker-compose.yml
src/: error.rs  lib.rs  main.rs  model.rs  router.rs  state.rs
src/handler/: bucket.rs  object.rs
src/service/: mod.rs  s3client.rs
tests/: integration.rs
