[package]
name = "rus3"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1"
aws-sdk-s3 = "1"
axum = "0"
axum-server = "0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0"
tracing-subscriber = {version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
hyper = { version = "1", features = ["client", "http1"] }
tower = { version = "0", features = ["util"] }
